--- a/new_20-feb-2020/assets/css/contact.css
+++ b/new_20-feb-2020/assets/css/contact.css
@@ -259,8 +259,8 @@ ul.fo_menu li, ul.fo_menu li a {
     display: inline-block;
     font-weight: 100;
     transform: scale(1)
-    -webkit-transition: font-weight .3s ease-in-out, scale .3s ease-in-out;
-    transition: font-weight .3s ease-in-out, scale .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .address-info  a:hover{
