--- a/new_20-feb-2020/assets/css/contact.css
+++ b/new_20-feb-2020/assets/css/contact.css
@@ -265,7 +265,7 @@ ul.fo_menu li, ul.fo_menu li a {
 
 .address-info  a:hover{
     color: #666;
-    font-weight: 600;
+    text-shadow: 0 0 .65px #333, 0 0 .65px #333;
     text-decoration: none !important;
     transform: scale(1.05);
 }
