--- a/new_20-feb-2020/assets/css/contact.css
+++ b/new_20-feb-2020/assets/css/contact.css
@@ -661,6 +661,7 @@ input.form-control:hover, textarea.form-control:hover {
 
 .thank-you-msg {
     font-size: 36.5px;
+    height: 62px;
 }
 
 .contact-form {
